<resources>
    <string name="app_name">Pop</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_signup">New user? Click here to register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- UserFragment -->
    <string name="user_name">First M. Last</string>
    <string name="description_label">Description</string>
    <string name="user_description">...</string>
    <string name="share_profile">Share</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
</resources>
